# SoarAI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
analysis/: analysis.py  requirements.txt
configs/: soar.yaml  test_config.yaml
data/: demonstration_values.txt
data/peak_lists/: master.txt
data/test_data/: test_peak_list.txt
include/: Chem.h  InferenceAPI.h  Postprocess.h  Preprocess.h  SysUtils.h  YamlHelpers.h
reproduce/shell_scripts/: analysis.sh  build_cpp_bin.sh  create_py_models.sh  data_prep.sh  infer.sh  prepare_python_venvs.sh  reproduce_all.sh  train.sh  validate_config.sh
src/: CMakeLists.txt  api_driver.cpp  data_preparation.cpp  inference.cpp  train.cpp
src/Helpers/: CMakeLists.txt  Chem.cpp  InferenceAPI.cpp  Postprocess.cpp  Preprocess.cpp  SysUtils.cpp  YamlHelpers.cpp
tests/shell_scripts/: run_test_pipeline.sh
web_app/shell_scripts/: build_cpp_bin_web_app.sh  build_peak_fit_bin.sh  start_api.sh
