cmake_minimum_required(VERSION 3.20)

project(SoarAI
	VERSION 0.1.0
	LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)

find_package(CNum CONFIG REQUIRED)
add_subdirectory(${CMAKE_SOURCE_DIR}/src)
